add JAVA_OPTS