@@ -1,5 +1,5 @@
 #!/bin/sh
 #
-export CATALINA_OPTS=-Dcm.log.base=~hotmath/tomcat2/logs
+export CATALINA_OPTS=-Dcm.log.base=~hotmath/tomcat2
 
-export CATALINA_PID=~hotmath/tomcat2/bin/catalina.pid
+JAVA_OPTS=-server -Xms1024m -Xmx1024m -XX:MaxPermSize=128m -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -XX:+UseConcMarkSweepGC
